--- a/Thesis_script.Rmd
+++ b/Thesis_script.Rmd
@@ -522,23 +522,8 @@ wordcloud(words = data.all.keywords.unit$value, freq = data.all.keywords.unit$n,
           colors=brewer.pal(8, "Dark2"), scale=c(2.0,0.25))
 ```
 
+
 ```{r}
-#able to work with different subsets with the following code: 
-  ## can check different analysis by year
-corp_recent <- corpus_subset(corp, Year >= 1990)
-ndoc(corp_recent)
-
-##You can see how keywords are used in the actual contexts in a concordance view produced by kwic().
-  #https://tutorials.quanteda.io/basic-operations/tokens/kwic/
-kw_immig <- kwic(toks, pattern =  "immig*")
-head(kw_immig, 10)
-
-#You can remove tokens that you are not interested in using tokens_select(). Usually we remove function words (grammatical words) that have little or no substantive meaning in pre-processing. stopwords() returns a pre-defined list of function words.
-
-```
-
-
-```{}
 #information about number of articles indexed in scopus by year, sourced from the extra materials of:
   #Thelwall, M. (2022) Scopus 1900-2020: Growth in articles, abstracts, countries, fields, and journals. Quantitative Science Studies. Advance Publication. https://doi.org/10.1162/qss_a_00177
 
@@ -546,32 +531,35 @@ scopus.psych <- data.frame(year = c(1900,	1901,	1902,	1903,	1904,	1905,	1906,	19
                            articles = c(44,	33,	44,	32,	69,	57,	53,	54,	93,	84,	81,	92,	100,	108,	119,	104,	108,	105,	84,	104,	95,	62,	109,	105,	96,	80,	138,	134,	151,	123,	149,	133,	142,	137,	138,	141,	161,	232,	218,	179,	186,	184,	145,	182,	171,	186,	171,	192,	219,	294,	368,	362,	407,	444,	422,	351,	340,	325,	369,	359,	304,	341,	417,	437,	537,	1054,	1079,	1289,	1436,	1163,	1470,	1526,	1478,	1855,	2025,	1942,	2101,	2139,	2411,	2346,	2490,	2659,	2806,	2804,	2711,	2799,	2748,	2789,	3009,	3007,	3347,	3352,	3551,	3490,	3540,	3815,	5051,	4957,	5260,	5189,	5363,	5521,	5245,	4746,	5531,	5331,	6832,	7873,	8213,	7032,	7448,	7778,	8246,	8949,	10238,	10324,	11584,	12028,	12092,	13691,	15634))
 ```
 
-
-
 ```{r}
-#loading the csv file on number of articles about number of articles scopus has indexed for each year
-psych.articles.year <- read.csv("articles.by.year.csv", na.strings = c("", "NA"))
+#graph of the number of articles indexed by Scopus as calculated from Thelwall (2022)
+
+scopus.psych <- scopus.psych %>%
+  filter(year > 1969)
+
+ggplot(scopus.psych) +
+  geom_line(aes(x=year, y=articles)) +
+  scale_x_continuous(breaks = c(1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015, 2020)) +
+  #scale_y_continuous(breaks = c(0, 25, 50, 75, 100, 125, 150, 175, 200, 225, 250)) +
+  labs(title= "Number of psyschology articles indexed by Scopus (Thelwall 2022)", x = "Year", y = "Number of articles") #+
+  #theme_thesis
+
 
 ```
 
 ```{r}
+#loading the csv file on number of articles about number of articles scopus has indexed for each year
+  #this information is from ME as seen by a scopus search in Feb 2022
+psych.articles.year <- read.csv("articles.by.year.csv", na.strings = c("", "NA"))
+
 #making a graph of number of journals indexed by Scopus under the category of psychology
   ggplot(psych.articles.year, aes(x = year, y = article.count)) +
   geom_line() +  
     scale_x_continuous(breaks = c(1940, 1945, 1950, 1955, 1960, 1965, 1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015, 2020)) +
-    labs(title= "Number of journals indexed by Scopus under the category of psychology", x = "Year", y = "Number of journals") +
+    labs(title= "Number of journals indexed by Scopus under the category of psychology 
+         (Barcenas Meade, Scopus Feb 2022)", x = "Year", y = "Number of journals") +
     theme_thesis
 
-```
-
-
-
-```{r}
-#loading information from Scopus representative of the number of articles per particular journal that are uploaded to scopus January-February 2022
-
-scopus_journal_counts <- read.csv("scopus_journal_counts.csv", na.strings = c("", "NA"))
-
-scopus_source_list <- read.csv("scopus_source_list.csv", na.strings = c("", "NA"))
 ```
 
 
@@ -652,5 +640,57 @@ ggplot(data.location.bar, aes(x = n, y = data.location.labels)) +
 #POTENTIALLY ORDER BY SIZE
   #https://stackoverflow.com/questions/25664007/reorder-bars-in-geom-bar-ggplot2-by-value
 ```
+
+```{r}
+#loading information from Scopus representative of the number of articles per particular journal that are uploaded to scopus January-February 2022
+
+scopus.journal.counts <- read.csv("scopus_journal_counts.csv", na.strings = c("", "NA"))
+
+scopus.source.list <- read.csv("scopus_source_list.csv", na.strings = c("", "NA"))
+
+#cleaning up the dataframe
+names(scopus.journal.counts) <- c("journal_title", 1942,	1943,	1944,	1945,	1946,	1947,	1948,	1949,	1950,	1951,	1952,	1953,	1954,	1955,	1956,	1957,	1958,	1959,	1960,	1961,	1962,	1963,	1964,	1965,	1966,	1967,	1968,	1969,	1970,	1971,	1972,	1973,	1974,	1975,	1976,	1977,	1978,	1979,	1980,	1981,	1982,	1983,	1984,	1985,	1986,	1987,	1988,	1989,	1990,	1991,	1992,	1993,	1994,	1995,	1996,	1997,	1998,	1999,	2000,	2001,	2002,	2003,	2004,	2005,	2006,	2007,	2008,	2009,	2010,	2011,	2012,	2013,	2014,	2015,	2016,	2017,	2018,	2019,	2020, 2021, "total.by.journal")
+  
+```
+
+grand.total.scopus <- scopus.journal.counts %>%
+  filter_all(all_vars(.! == "journal"))
+
+```{r}
+
+scopus.journal.counts <- scopus.journal.counts %>%
+  select(-total.by.journal)
+  filter(journal_title == "Grand Total") %>%
+  select(-journal.title)
+
+
+#converting from wide to long
+grand.total.scopus <- as.data.frame(t(grand.total.scopus))
+
+#making the rowname (year) a column
+grand.total.scopus <- tibble::rownames_to_column(grand.total.scopus, "year")
+
+#renaming the columns for easier management
+names(grand.total.scopus) <- c("year", "total.articles")
+
+#deleting columns that aren't about the year
+
+grand.total.scopus <- scopus.journal.counts[-c(1, 82), ]
+
+glimpse(grand.total.scopus)
+  
+```
+
+
+
+
+
+
+
+
+
+
+
+
 
 
