--- a/Thesis_script.Rmd
+++ b/Thesis_script.Rmd
@@ -90,7 +90,7 @@ library(spacyr)
 library(newsmap)
 ```
 
-
+Loading together
 ```{}
 #loading the csv files and then joining them in to one data base
   ##converting blanks in to NA
@@ -111,10 +111,8 @@ data.loaded <- rbind(ev_1, ev_2, ev_3)
 write_csv(data.loaded, "data.loaded.csv")
 ```
 
-
-cleaning
-  load once per session
-```{r}
+Cleaning and separating
+```{}
 #loading the csv file with all the databases in to a data frame
 data.original <- read.csv("data.loaded.csv")
 
@@ -185,7 +183,29 @@ colSums(is.na(data))
 data <- data %>%
  select(- editors, -sponsors, -conference.name, -conference.date, -conference.location, -conference.code, -isbn, -page.count) %>%
   mutate(id = row_number())
+
 ```
+
+Writind data csv file
+```{}
+#writing a csv file of data to use in the shiny apps
+write_csv(data, "data.csv")
+```
+
+```{r}
+#loading the data back in to this workplace so the data doesn't have to run every time
+data <- read.csv("data.csv")
+```
+
+```{r}
+ filtered.data <- data %>%
+            group_by(source.title, year) %>%
+            count()
+
+ggplot(filtered.data, aes(x=year, y=source.title, color=source.title)) +
+  geom_line()
+```
+ggplot(by_year, aes(x=year, y=medianGdpPerCap))+ geom_line()+ expand_limits(y=0)
 
 ```{r} 
 #STARTED GETTING AN ERROR HERE ONCE I SPLIT THE DATA, SO I MOVED IT UP
@@ -287,7 +307,7 @@ data.location <- rbind(data.location.none.corrected, data.location)
 
 ```
 
-```{}
+```{r}
 ## that the location of the keywords have been accounted for in all of the articles in the database
 data.location.check <- data.location %>%
   filter(title.ev == FALSE) %>%
@@ -309,6 +329,8 @@ data <- cSplit(data, "index.keywords", sep=";")
 data <- cSplit(data, "references", sep=";")
 
 data <- cSplit(data, "author.keywords", sep=";")
+
+write_csv(data, "data.split.csv")
 ```
 
 
@@ -378,14 +400,12 @@ data.yes.abstract <- data %>%
 data.abstract.both <- rbind(data.no.abstract, data.yes.abstract)
 
 #stacked bar graph of whether different kinds of items have abstracts listed or not
-
-#FIGURE OUT HOW TO TILT THE TEXT
 ggplot(data.abstract.both, aes(x=document.type, fill=has.abstract)) +
   geom_bar()+
   labs(title= "Distribution of document types about EV and wether they have abstracts", x = "Kinds of documents", y = "Number of documents") +
   guides(fill = guide_legend(title = "Has Abstract")) +
-  #theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  theme_thesis
+  theme_thesis +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
 ```{r}
@@ -541,8 +561,8 @@ ggplot(scopus.psych) +
   geom_line(aes(x=year, y=articles)) +
   scale_x_continuous(breaks = c(1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015, 2020)) +
   #scale_y_continuous(breaks = c(0, 25, 50, 75, 100, 125, 150, 175, 200, 225, 250)) +
-  labs(title= "Number of psyschology articles indexed by Scopus (Thelwall 2022)", x = "Year", y = "Number of articles") #+
-  #theme_thesis
+  labs(title= "Number of psyschology articles indexed by Scopus (Thelwall 2022)", x = "Year", y = "Number of articles") +
+  theme_thesis
 
 
 ```
@@ -563,7 +583,7 @@ psych.articles.year <- read.csv("articles.by.year.csv", na.strings = c("", "NA")
 ```
 
 
-```{}
+```{r}
 #locating the most cited article
 data %>%
   slice_max(cited.by, n = 1)
@@ -624,13 +644,13 @@ data.06.21 <- data %>%
 
 ```{r}
 #preparing the dataframe for making the pie chart
-data.location <- data.location %>%
+data.location.per <- data.location %>%
   count(title.ev, abstract.ev, keywords.all.ev) %>%
   mutate(per = (100*n)/2650)
 
-data.location.labels <- c("Just Keywords", "Just Abstract", "Abstract and Keywords", "Just Title", "Title and Keywords", "Title and Abstract", "Title, Abstract, and Keywords")
+data.location.labels <- c("None", "Just Keywords", "Just Abstract", "Abstract and Keywords", "Just Title", "Title and Keywords", "Title and Abstract", "Title, Abstract, and Keywords")
 
-data.location.bar <- cbind(data.location, data.location.labels)
+data.location.bar <- cbind(data.location.per, data.location.labels)
 
 ggplot(data.location.bar, aes(x = n, y = data.location.labels)) +
   geom_col()  +
@@ -653,39 +673,69 @@ names(scopus.journal.counts) <- c("journal_title", 1942,	1943,	1944,	1945,	1946,
   
 ```
 
-grand.total.scopus <- scopus.journal.counts %>%
-  filter_all(all_vars(.! == "journal"))
-
 ```{r}
+#making a graph of the information from the scopus rep: need to convert data to long and select only the total of the years
 
-scopus.journal.counts <- scopus.journal.counts %>%
-  select(-total.by.journal)
+#filtering the data to just have the grand total of the information
+scopus.total.counts <- scopus.journal.counts  %>%
+  select(-total.by.journal) %>%
   filter(journal_title == "Grand Total") %>%
-  select(-journal.title)
-
+  select(-journal_title)
 
 #converting from wide to long
-grand.total.scopus <- as.data.frame(t(grand.total.scopus))
+grand.total.scopus <- as.data.frame(t(scopus.total.counts))
 
 #making the rowname (year) a column
 grand.total.scopus <- tibble::rownames_to_column(grand.total.scopus, "year")
 
 #renaming the columns for easier management
 names(grand.total.scopus) <- c("year", "total.articles")
-
-#deleting columns that aren't about the year
-
-grand.total.scopus <- scopus.journal.counts[-c(1, 82), ]
-
-glimpse(grand.total.scopus)
   
 ```
 
+```{r}
+#making a graph of the information from the scopus representative
+#loading the csv file on number of articles about number of articles scopus has indexed for each year
+  #this information is from ME as seen by a scopus search in Feb 2022
+
+#making a graph of number of journals indexed by Scopus under the category of psychology
+
+ggplot(grand.total.scopus) +
+  geom_line(aes(x=year, y=total.articles, group = 1)) +
+  #scale_x_continuous(breaks = c(1970, 1975, 1980, 1985, 1990, 1995, 2000, 2005, 2010, 2015, 2020)) +
+  #scale_y_continuous(breaks = c(0, 25, 50, 75, 100, 125, 150, 175, 200, 225, 250)) +
+  labs(title= "Number of psyschology articles indexed by Scopus (Thelwall 2022)", x = "Year", y = "Number of articles") +
+  theme_thesis +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+  
+```
+
+```{r}
+#making a graph of what the proportions are of having abstract/not having abstract in the data by year
+ggplot(data.abstract.both, aes(x=year, fill=has.abstract)) +
+  geom_bar() +
+  labs(title= "Distribution of document types about EV and wether they have abstracts by year", x = "Year", y = "Number of documents") +
+  guides(fill = guide_legend(title = "Has Abstract")) +
+  theme_thesis +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+```
 
 
+```{r}
+#making a graph of what the proportions are of having abstract/not having abstract in the data by year
+data.abstract.both %>% 
+  filter(year < 200)
 
+ggplot(data.abstract.both, aes(x=year, fill=has.abstract)) +
+  geom_bar() +
+  labs(title= "Distribution of document types about EV and wether they have abstracts by year (1972-2000)", x = "Year", y = "Number of documents") +
+  guides(fill = guide_legend(title = "Has Abstract")) +
+  theme_thesis +
+    theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
-
+```
 
 
 
